--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2ce898; }
+  background: #2eacc2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7375fc; }
+  background: #159f88; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #bbf0f9; }
+  background: #718594; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #de69e8; }
+  background: #bed430; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #91d333; }
+  background: #e9fec4; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1a17b7; }
+  background: #6f5a71; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #01ec8b; }
+  background: #0c9a05; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #64a3c9; }
+  background: #0e8d93; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #d57ad6; }
+  background: #43797d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #93d4ac; }
+  background: #7afb42; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0a6a34; }
+  background: #85e975; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0677b3; }
+  background: #8346d1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e36de8; }
+  background: #ac29bc; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #194f83; }
+  background: #af398c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #284477; }
+  background: #fc89de; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f73b94; }
+  background: #76018d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0ead8f; }
+  background: #032c22; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #771631; }
+  background: #4d40ca; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #60460c; }
+  background: #ccf4fd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2e5af5; }
+  background: #66c518; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e56583; }
+  background: #d2eb0e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #fd2c9d; }
+  background: #5931c5; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #dd0bcf; }
+  background: #6cb677; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f8b087; }
+  background: #ae7925; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e6509c; }
+  background: #86aa43; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #37fc82; }
+  background: #1c70d6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #35ce3b; }
+  background: #b4f7f4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #bb7643; }
+  background: #270ab1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #223e68; }
+  background: #8e32e7; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d833ec; }
+  background: #a0ff9a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7daeb3; }
+  background: #7b3b67; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2291f8; }
+  background: #13d2ca; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3c94ad; }
+  background: #67d842; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #835fec; }
+  background: #bf81dd; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a7bf69; }
+  background: #50c569; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c69769; }
+  background: #c9dd3a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #105522; }
+  background: #8aeddf; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #1af56e; }
+  background: #5cb5fb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b4b2c8; }
+  background: #f223c1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1702a0; }
+  background: #e3e41e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ed3486; }
+  background: #7eda9a; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #da38f7; }
+  background: #4fb81e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d9d0ed; }
+  background: #c03c27; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e5512e; }
+  background: #5ad8df; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f99e9a; }
+  background: #34779a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #bd781d; }
+  background: #46d8b9; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #33be1e; }
+  background: #31289f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ad9cc7; }
+  background: #e05645; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a5a122; }
+  background: #7db0ff; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2df8f8; }
+  background: #d3cd1d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #054fb3; }
+  background: #164095; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f39fbb; }
+  background: #5656cc; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #45899e; }
+  background: #50ff29; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #93be66; }
+  background: #a502ee; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e45492; }
+  background: #f73278; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #272e05; }
+  background: #4d91c2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #08fa92; }
+  background: #36305b; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8534bd; }
+  background: #fec1a4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #969e59; }
+  background: #f0ad8f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4a1edd; }
+  background: #f12335; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #199d32; }
+  background: #711199; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #870975; }
+  background: #d5b1da; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #347a25; }
+  background: #ca882f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #721dd5; }
+  background: #f94375; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1bde7f; }
+  background: #0a45d6; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a1a352; }
+  background: #7a4715; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f58c3f; }
+  background: #f9b87d; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b3b53e; }
+  background: #a69725; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b0aba1; }
+  background: #2a1c76; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b3c9b5; }
+  background: #5bce01; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1316d5; }
+  background: #d3abdb; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #3eee1d; }
+  background: #856b43; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ac2bf8; }
+  background: #38926a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e960db; }
+  background: #bbae56; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #798a16; }
+  background: #80dc48; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b3d485; }
+  background: #4fb488; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #11037c; }
+  background: #9b121e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a0be54; }
+  background: #f4a309; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c2bd92; }
+  background: #90887f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #de3f56; }
+  background: #74476b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bc0e8f; }
+  background: #09a6f1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4eb67b; }
+  background: #06cf1b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d96504; }
+  background: #5ea9eb; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #29b2a2; }
+  background: #291a3e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0dc34c; }
+  background: #54f185; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0ea67a; }
+  background: #fde8b1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0ad052; }
+  background: #5e0133; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #167130; }
+  background: #8974ad; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #701a6c; }
+  background: #7cf579; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #78c585; }
+  background: #eb2ff7; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #13c786; }
+  background: #1b3b76; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6254bc; }
+  background: #4e52ef; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2a68be; }
+  background: #371df1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ccc703; }
+  background: #33c733; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5385b1; }
+  background: #a653ae; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #893625; }
+  background: #1b897a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #424c4b; }
+  background: #cd0c79; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c30486; }
+  background: #40ea7b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #bd1082; }
+  background: #c42655; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #34cb43; }
+  background: #03f236; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11269,8 +11269,10 @@ input:checked + .sliders:before {
   display: flex;
   justify-content: center; }
 
+.table-icon span,
 .table-icon span + span {
-  letter-spacing: 4px; }
+  letter-spacing: 4px;
+  font-size: 18px; }
 
 .table-icon img {
   width: 20px;
