--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2eacc2; }
+  background: #b99eb9; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #159f88; }
+  background: #deadf1; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #718594; }
+  background: #6e78b6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bed430; }
+  background: #4fe7d2; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e9fec4; }
+  background: #bfa510; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6f5a71; }
+  background: #f50be1; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #0c9a05; }
+  background: #83e8bc; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0e8d93; }
+  background: #bbfe02; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #43797d; }
+  background: #4e9fb5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7afb42; }
+  background: #312627; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #85e975; }
+  background: #4ec81d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #8346d1; }
+  background: #6b36c9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ac29bc; }
+  background: #48dd83; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #af398c; }
+  background: #0d8d89; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #fc89de; }
+  background: #c4066a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #76018d; }
+  background: #b37a82; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #032c22; }
+  background: #86f6f4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #4d40ca; }
+  background: #b264f8; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ccf4fd; }
+  background: #d389d4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #66c518; }
+  background: #f4a00d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d2eb0e; }
+  background: #54089f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5931c5; }
+  background: #fdb176; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #6cb677; }
+  background: #9963fd; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ae7925; }
+  background: #0898d1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #86aa43; }
+  background: #f1598f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1c70d6; }
+  background: #95b375; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b4f7f4; }
+  background: #e1b7b5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #270ab1; }
+  background: #c16b90; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8e32e7; }
+  background: #17cd2c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a0ff9a; }
+  background: #f3d566; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7b3b67; }
+  background: #6ab9fd; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #13d2ca; }
+  background: #d85797; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #67d842; }
+  background: #b649c3; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #bf81dd; }
+  background: #28d4eb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #50c569; }
+  background: #558ab7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c9dd3a; }
+  background: #418e30; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8aeddf; }
+  background: #a4ec9f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #5cb5fb; }
+  background: #fad055; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f223c1; }
+  background: #735821; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e3e41e; }
+  background: #d3501f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7eda9a; }
+  background: #bfc31d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4fb81e; }
+  background: #53fb20; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c03c27; }
+  background: #4b1c56; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5ad8df; }
+  background: #066db2; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #34779a; }
+  background: #a56de5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #46d8b9; }
+  background: #9dac53; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #31289f; }
+  background: #ebd67f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e05645; }
+  background: #f95145; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7db0ff; }
+  background: #be34b7; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d3cd1d; }
+  background: #c449c7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #164095; }
+  background: #3f0b30; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5656cc; }
+  background: #f071ce; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #50ff29; }
+  background: #e2ca3d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a502ee; }
+  background: #f1ad2d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f73278; }
+  background: #b03eab; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4d91c2; }
+  background: #189e21; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #36305b; }
+  background: #27b457; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fec1a4; }
+  background: #53b801; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f0ad8f; }
+  background: #10c7d3; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f12335; }
+  background: #7c8846; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #711199; }
+  background: #0c1afe; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d5b1da; }
+  background: #608c27; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ca882f; }
+  background: #1e57a2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f94375; }
+  background: #0e0475; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0a45d6; }
+  background: #f65be1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7a4715; }
+  background: #f64a04; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f9b87d; }
+  background: #68a0eb; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a69725; }
+  background: #664ea1; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2a1c76; }
+  background: #26dfc4; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5bce01; }
+  background: #bc2ee0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d3abdb; }
+  background: #8d3fea; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #856b43; }
+  background: #bec682; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #38926a; }
+  background: #dda76b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #bbae56; }
+  background: #0fc2e6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #80dc48; }
+  background: #055279; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #4fb488; }
+  background: #8b57aa; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9b121e; }
+  background: #c3de42; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f4a309; }
+  background: #ca17f7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #90887f; }
+  background: #6f36cb; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #74476b; }
+  background: #026933; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #09a6f1; }
+  background: #b35ca4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #06cf1b; }
+  background: #d3d0d2; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5ea9eb; }
+  background: #e2b6db; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #291a3e; }
+  background: #949f22; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #54f185; }
+  background: #e7060c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fde8b1; }
+  background: #508624; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5e0133; }
+  background: #6474ef; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8974ad; }
+  background: #71b0cd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7cf579; }
+  background: #f553b5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #eb2ff7; }
+  background: #deec7f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1b3b76; }
+  background: #4f09bd; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #4e52ef; }
+  background: #790b02; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #371df1; }
+  background: #57e0a8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #33c733; }
+  background: #c2112b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a653ae; }
+  background: #734b53; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1b897a; }
+  background: #30bfc2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cd0c79; }
+  background: #774f43; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #40ea7b; }
+  background: #38cba4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c42655; }
+  background: #6e8863; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #03f236; }
+  background: #241c3c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11382,6 +11382,9 @@ input:checked + .sliders:before {
 
 .connectors-main-wrapper .parent-row td:nth-child(1) {
   padding: 8px 0px 8px 10px !important; }
+
+.connectors-main-wrapper .parent-row td:nth-child(2) {
+  padding-left: 0px !important; }
 
 .connectors-wrapper-full {
   margin-top: 0px !important; }
