--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b99eb9; }
+  background: #696c97; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #deadf1; }
+  background: #8b8509; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6e78b6; }
+  background: #2aecd4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #4fe7d2; }
+  background: #ed4929; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #bfa510; }
+  background: #f80f17; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f50be1; }
+  background: #22fc23; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #83e8bc; }
+  background: #87a9b0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bbfe02; }
+  background: #91cac4; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4e9fb5; }
+  background: #4cb087; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #312627; }
+  background: #7755b4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #4ec81d; }
+  background: #dd4cfe; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6b36c9; }
+  background: #cfb91c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #48dd83; }
+  background: #df0ba6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0d8d89; }
+  background: #16a893; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c4066a; }
+  background: #0e457e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b37a82; }
+  background: #978f0e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #86f6f4; }
+  background: #78fbbd; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b264f8; }
+  background: #ec66ab; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d389d4; }
+  background: #0f8bc0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f4a00d; }
+  background: #a2ae2d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #54089f; }
+  background: #4d275a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #fdb176; }
+  background: #d1e50c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9963fd; }
+  background: #77f38f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0898d1; }
+  background: #54f438; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f1598f; }
+  background: #b32dc6; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #95b375; }
+  background: #8b91f7; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e1b7b5; }
+  background: #46674f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c16b90; }
+  background: #465c9a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #17cd2c; }
+  background: #ef6248; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f3d566; }
+  background: #ed4284; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6ab9fd; }
+  background: #6bd4b9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d85797; }
+  background: #85a1ae; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b649c3; }
+  background: #90917e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #28d4eb; }
+  background: #706743; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #558ab7; }
+  background: #f8e8c7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #418e30; }
+  background: #f6babe; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a4ec9f; }
+  background: #2ad0f8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fad055; }
+  background: #28383b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #735821; }
+  background: #7564ab; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d3501f; }
+  background: #e0da61; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #bfc31d; }
+  background: #c5e69e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #53fb20; }
+  background: #f42aa9; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4b1c56; }
+  background: #c90336; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #066db2; }
+  background: #ca69ef; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a56de5; }
+  background: #bbf9fc; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9dac53; }
+  background: #3d3258; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ebd67f; }
+  background: #336e79; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f95145; }
+  background: #35496e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #be34b7; }
+  background: #81ef6a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c449c7; }
+  background: #44dd0b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3f0b30; }
+  background: #8de14c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f071ce; }
+  background: #f27f9e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e2ca3d; }
+  background: #d26ea2; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f1ad2d; }
+  background: #195ad9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b03eab; }
+  background: #0e0e12; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #189e21; }
+  background: #37c041; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #27b457; }
+  background: #df4ce1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #53b801; }
+  background: #ed822e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #10c7d3; }
+  background: #5c5bc9; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #7c8846; }
+  background: #788f4c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0c1afe; }
+  background: #92408f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #608c27; }
+  background: #5fb0cf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1e57a2; }
+  background: #0adcd4; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0e0475; }
+  background: #7fc20b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f65be1; }
+  background: #c8ec84; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f64a04; }
+  background: #c50a69; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #68a0eb; }
+  background: #47db83; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #664ea1; }
+  background: #ff2720; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #26dfc4; }
+  background: #551f2d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bc2ee0; }
+  background: #01738b; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8d3fea; }
+  background: #685f0f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bec682; }
+  background: #f779db; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #dda76b; }
+  background: #b2c9f7; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #0fc2e6; }
+  background: #9e3efd; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #055279; }
+  background: #ddb263; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #8b57aa; }
+  background: #979dbe; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c3de42; }
+  background: #6a1c49; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ca17f7; }
+  background: #c12611; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6f36cb; }
+  background: #e4be3d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #026933; }
+  background: #b735e9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b35ca4; }
+  background: #3c17f2; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d3d0d2; }
+  background: #ec447f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e2b6db; }
+  background: #f4a687; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #949f22; }
+  background: #165880; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e7060c; }
+  background: #a1b960; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #508624; }
+  background: #256fc7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #6474ef; }
+  background: #cbd20d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #71b0cd; }
+  background: #544296; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f553b5; }
+  background: #64bffe; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #deec7f; }
+  background: #4ac2b7; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4f09bd; }
+  background: #7215e6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #790b02; }
+  background: #b3e8d7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #57e0a8; }
+  background: #18f1b7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c2112b; }
+  background: #7c3a8c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #734b53; }
+  background: #787d7e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #30bfc2; }
+  background: #74cb42; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #774f43; }
+  background: #0c9cc4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #38cba4; }
+  background: #e9aa83; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6e8863; }
+  background: #d2e5ec; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #241c3c; }
+  background: #36c4a1; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11212,10 +11212,10 @@ input[type="submit"] {
   transition: 0.4s; }
 
 input:checked + .sliders {
-  background-color: #2196f3; }
+  background-color: #776fff; }
 
 input:focus + .sliders {
-  box-shadow: 0 0 1px #2196f3; }
+  box-shadow: 0 0 1px #776fff; }
 
 input:checked + .sliders:before {
   -webkit-transform: translateX(26px);
